# ocaml-aoc-2024

./: dune-project  flake.nix  learn.opam
lib/: day1.ml  day2.ml  day3.ml  day4.ml  dune
test/: dune
